<resources>
    <string name="app_name">My Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rutina_cancelar_titulo_dialogo">¿Terminar entrenamiento?</string>
    <string name="mensaje_aliento">No te des por vencido, ¡tú puedes!</string>
    <string name="rutina_cancelar_boton">Terminar</string>
    <string name="rutina_continuar_boton">Continuar</string>
    <string name="terminar_rutina">Terminar Rutina</string>
    <string name="descanso_rutina">Descanso</string>
    <string name="rutina_terminada">Rutina Terminada</string>

    <string name="nombre_rutina">Nombre Rutina</string>
    <string name="categoria">Categoría</string>
    <string name="url_imagen">URL Imagen</string>
    <string name="descripcion">Descripción</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="siguiente">Siguiente</string>




</resources>
