<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityCrearRutina">


    <EditText
        android:id="@+id/crear_rutina_nombre_rutina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_rutina"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/crear_rutina_categoria_rutina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/categoria"
        android:textSize="15dp"
        />
    <EditText
        android:id="@+id/crear_rutina_imagen_rutina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url_imagen"
        android:textSize="15dp"
        />
    <EditText
        android:id="@+id/crear_rutina_descripicion_rutina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion"
        android:gravity="left"
        android:layout_weight="1"
        android:textSize="15dp"
        />
    <Button
        android:id="@+id/crear_rutina_boton_siguiete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siguiente"
        android:layout_gravity="right"/>

</LinearLayout>